# maxogram

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  architecture.md  docker-compose.app.yml  docker-entrypoint.sh  install.sh  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 20260410_0001_initial_schema.py  20260419_0002_media_groups.py
maxogram/: __init__.py  __main__.py
src/maxogram/: __init__.py  app.py  cli.py  config.py  domain.py  metrics.py  runtime_resilience.py
src/maxogram/db/: __init__.py  models.py  repositories.py  session.py
src/maxogram/services/: commands.py  dedup.py  media.py  normalization.py  relay.py  rendering.py  retry.py  text_formatting.py
src/maxogram/workers/: delivery.py  normalizer.py  pollers.py  reconciliation.py
tests/: conftest.py  test_app.py  test_commands.py  test_config.py  test_db_optional.py  test_dedup.py  test_delivery.py  test_docs_and_installer.py  test_installer_postgres_targeting.py  test_installer_python_bootstrap.py  test_max_client.py  test_migrations.py  test_normalization.py  test_normalizer.py  test_pollers.py  test_reconciliation.py  test_rendering.py  test_retry.py  test_runtime_resilience.py  test_telegram_client.py  test_worker_backoff.py
