[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maxogram"
version = "0.1.0"
description = "Telegram to MAX family chat bridge"
requires-python = ">=3.13"
readme = "architecture.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["RUF012"]

[tool.mypy]
python_version = "3.13"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["^maxogram/"]
